append message to page and clear input

--- a/index.html
+++ b/index.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <title>Chatroom</title>
-</head>
-<body>
-  <script src="main.bundle.js"></script>
-</body>
+  <head>
+    <meta charset="utf-8">
+    <title>Chatroom</title>
+  </head>
+  <body>
+    <header>
+      <h1>ChatterBox</h1>
+    </header>
+    <section id="message-container"></section>
+    <form>
+      <input type="text" id="user-chat-input" placeholder="input message"/>
+      <button id="send-button" disabled>Send</button>
+    </form>
+    <script src="main.bundle.js"></script>
+  </body>
 </html>
