test for diable button

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </header>
     <section id="message-container"></section>
     <form>
-      <input type="text" id="user-chat-input" placeholder="input message"/>
+      <input type="text" id="user-chat-input" placeholder="input message">
       <button id="send-button" disabled>Send</button>
     </form>
     <script src="main.bundle.js"></script>
