--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Chatroom</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Hind+Guntur:500|Raleway:400,500" rel="stylesheet">
+    <!-- <link rel="stylesheet" type="text/css" href="style.css"> -->
   </head>
   <body>
     <header>
