add colors, sizing, and font to message articles

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <button id="send-button" disabled>Send</button>
     </form>
     <section>
-      <p>Characters: <span id="text-counter">0</span></p>
+      <p class="counter">Characters: <span id="text-counter">0</span></p>
     </section>
     <script src="main.bundle.js"></script>
   </body>
