match design with wireframe

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <header>
       <h1>ChatterBox</h1>
     </header>
-    <button id="show-all-messages">Show all messages</button>
+    <button id="show-all-messages-button">Show all messages</button>
     <section id="message-container"></section>
     <form>
-      <textarea id="user-chat-input" placeholder="Type message here and hit send."></textarea>
+      <textarea rows="2" wrap="hard" id="user-chat-input" placeholder="Please type message here. Hit send when complete."></textarea>
       <button id="send-button" disabled>Send</button>
     </form>
     <section>
