--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width, intial-scale=1">
     <title>Chatroom</title>
     <link href="https://fonts.googleapis.com/css?family=Hind+Guntur:500|Raleway:400,500" rel="stylesheet">
   </head>
